# ESPC5_code

./: .gitignore  LICENSE  README.md  cherry_pick_efficiency.py  update_readme.py
main/: CMakeLists.txt  idf_component.yml  main.cpp
main/libs/adc_reader/: adc_reader.cpp  adc_reader.h
main/libs/ads1115/: ads1115.cpp  ads1115.h
main/libs/config/: config.cpp  config.h
main/libs/data_types/: data_types.h
main/libs/gps/: gps.cpp
main/libs/hall_sensor/: hall_sensor.cpp  hall_sensor.h
main/libs/led_indicator/: led_indicator.cpp  led_indicator.h
main/libs/mpu6050/: mpu6050.cpp  mpu6050.h
main/libs/mqtt_client/: my_mqtt_client.cpp  my_mqtt_client.h
main/libs/sd_card/: sd_card.cpp  sd_card.h
main/libs/telemetry_data/: telemetry_data.cpp  telemetry_data.h
main/libs/telemetry_system/: telemetry_system.cpp  telemetry_system.h
main/libs/vesc_can/: vesc_can.cpp  vesc_can.h
main/libs/wifi_manager/: wifi_manager.cpp  wifi_manager.h
